[tool.poetry]
name = "ml-deep-dive"
version = "0.1.0"
description = ""
authors = ["Nicholas Anson <nix.anson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
torch = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
